Refactor repo module
Simplify RepoLoader singleton + remote/local loading flow

Replace nested loops with streams / cleaner collections handling

Improve null-safety across RepoFragment / RepoItemFragment

Reduce duplicated version & release selection logic

Fix lifecycle issues (adapter/searchView/listener safety)

Clean up UI filtering, sorting, and spannable styling logic

Co-Authored-By: Qing <44231502+byemaxx@users.noreply.github.com>